V6 fix images